Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Mi Blog de Juegos</title>
+    <title>N0tD3ad Blog</title>
 </head>
 <body>
     <header>
@@ -12,12 +12,12 @@
     </header>
     <main>
         <article>
-            <h2>Entrada 1: Título del Juego</h2>
+            <h2>Entrada 1: Fornite</h2>
             <p>Texto sobre el juego...</p>
         </article>
 
         <article>
-            <h2>Entrada 2: Otro Juego</h2>
+            <h2>Entrada 2: Warzone</h2>
             <p>Más detalles sobre este juego...</p>
         </article>
 
