--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <main>
         <article>
             <h2>Entrada 1: Fornite</h2>
-            <p>Texto sobre el juego...</p>
+            <p>Fortnite es un popular juego de batalla real desarrollado por Epic Games. Los jugadores compiten para ser el último en pie en un mapa que se reduce con el tiempo. Combina elementos de construcción y disparos, y su estética única ha atraído a una gran base de jugadores.</p>
         </article>
 
         <article>
             <h2>Entrada 2: Warzone</h2>
-            <p>Más detalles sobre este juego...</p>
+            <p>Call of Duty: Warzone es un juego gratuito de battle royale desarrollado por Infinity Ward. Forma parte de la franquicia Call of Duty y presenta intensos enfrentamientos en un mapa masivo. Los jugadores luchan por ser el último equipo o jugador en pie, con un enfoque en tácticas.</p>
         </article>
 
         <!-- Puedes agregar más entradas aquí -->
