Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>N0tD3ad Blog</title>
+    <title>Tu Sitio de Noticias</title>
 </head>
 <body>
     <header>
-        <h1>Mi Blog de Juegos</h1>
+        <h1>Tu Sitio de Noticias</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Política</a></li>
+                <li><a href="#">Tecnología</a></li>
+                <li><a href="#">Cultura</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <article>
-            <h2>Entrada 1: Fornite</h2>
-            <p>Fortnite es un popular juego de batalla real desarrollado por Epic Games. Los jugadores compiten para ser el último en pie en un mapa que se reduce con el tiempo. Combina elementos de construcción y disparos, y su estética única ha atraído a una gran base de jugadores.</p>
-        </article>
 
-        <article>
-            <h2>Entrada 2: Warzone</h2>
-            <p>Call of Duty: Warzone es un juego gratuito de battle royale desarrollado por Infinity Ward. Forma parte de la franquicia Call of Duty y presenta intensos enfrentamientos en un mapa masivo. Los jugadores luchan por ser el último equipo o jugador en pie, con un enfoque en tácticas.</p>
-        </article>
+    <section class="main-content">
+        <!-- Contenido de las noticias va aquí -->
+    </section>
 
-        <!-- Puedes agregar más entradas aquí -->
-    </main>
+    <footer>
+        <p>&copy; 2024 Tu Sitio de Noticias. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
