Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Tu Sitio de Noticias</title>
+    <title>N0tD3ad Noticias</title>
 </head>
 <body>
     <header>
-        <h1>Tu Sitio de Noticias</h1>
+        <h1>Noticias N0tD3ad</h1>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
